Fixing spacing on the bar graphs

--- a/mystyle.css
+++ b/mystyle.css
@@ -57,5 +57,5 @@ th.bar-column {
 }
 
 th.word-column {
-	width: 200px;
+	width: 300px;
 }
